# v4l2easy

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
inc/: v4l2easy.h
samples/: CMakeLists.txt
samples/capture_single_frame_mjpeg/: CMakeLists.txt  main.c
samples/capture_single_frame_raw/: CMakeLists.txt  main.c
samples/list_and_get_info/: CMakeLists.txt  main.c  main_origin.c
src/: v4l2easy.c
